# Snake

./: .gitignore  CMakeLists.txt  README.md  build.bat
src/: Snake.pro  create_level.cpp  create_level.h  create_level.ui  gamescreen.cpp  gamescreen.h  gamescreen.ui  levels.cpp  levels.h  levels.ui  log.cpp  log.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  new_level.cpp  new_level.h  new_level.ui  record.cpp  record.h  record.ui  scores.cpp  scores.h  scores.ui  scores_level1.txt  snake_model.cpp  snake_model.h  table_model.cpp  table_model.h  test.ui  type_direction.h
src/data/: card_level1.json  card_level2.json  card_leveltesr1.json  card_leveltest1_copy.json  levels.json  scores_level1.json  scores_level2.json  scores_level3.json
src/tests/: snake_model_test.cpp
